5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1637_2445.log
== TEST (2019-04-10 20:58:24) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = int(input("valor da temperatura: "))


if (escala.upper() == "C" ):
	c = (5/9)*(vt-32)
	print(float(c))
	
else:
	f = (-5/9)*(vt+32)
	print(float(f))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:58:49) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = int(input("valor da temperatura: "))


if (escala.upper() == "C" ):
	c = (5/9)*(vt-32)
	print(float(c))
	
else:
	f = (-5/9)*(vt+32)
	print(float(f))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:59:16) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "C" ):
	c = (5/9)*(vt-32)
	print(float(c))
	
else:
	f = (-5/9)*(vt+32)
	print(float(f))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:59:56) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "C" ):
	c = (5/9)*(vt-32)
	print(float(c))
	
else:
	f = (-5/9)*(vt+32)
	print(float(f))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:04:08) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "C" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else:
	f = (9*vt+32) / 5
	print(round(f, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:05:36) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	f = (5*(vt-32)) / 9
	print(round(c, 2))
	
else:
	c = (9*vt+32) / 5
	print(round(f, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(f, 2))
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:05:56) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	f = (5*(vt-32)) / 9
	print(round(f, 2))
	
else:
	c = (9*vt+32) / 5
	print(round(c, 2))
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:07:16) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else:
	f = (9*vt+32) / 5
	print(round(f, 2))
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:07:46) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else:
	f = (9*vt+32) / 5
	print(round(f, 2))
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:08:06) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else:
	f = (9*vt+32) / 5
	print(round(f, 2))
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:08:17) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else:
	f = (9*vt+32) / 5
	print(round(f, 2))
-- EXECUTION TIME:
0.183881
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
582.4
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
6.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:08:58) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else: (escala.upper() == "C" )
	f = (9*vt+32) / 5
	print(round(f, 2))
-- ERROR:
File "XXXX", line 10
    f = (9*vt+32) / 5
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:09:16) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else: 
	f = (9*vt+32) / 5
	print(round(f, 2))
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:10:11) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else: 
	f = ((9*vt)+32) / 5
	print(round(f, 2))
-- OUTPUT:
582.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:11:44) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else: 
	f = (vt*9/5) + 32
	print(round(f, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 21:11:57) 
-- CODE:
escala = input("qual escala? (C/F) ")
vt = float(input("valor da temperatura: "))


if (escala.upper() == "F" ):
	c = (5*(vt-32)) / 9
	print(round(c, 2))
	
else: 
	f = (vt*9/5) + 32
	print(round(f, 2))
-- EXECUTION TIME:
0.139449
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
